maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:-8: error: Unmatched closing brace '}' ignored here
	}
        ^IslandMaze:-7: error: illegal start of statement (no modifiers allowed here)
	override def setY(i: Int)  { 
        ^IslandMaze:-3: error: illegal start of statement (no modifiers allowed here)
	override def setPos(x: Int, y:Int)  { 
        ^IslandMaze:2: error: illegal start of statement (no modifiers allowed here)
override def run() {var state=0;
^